public class Pixel {
    private int x;
    private int y;
    private int color;

    public void setColor(int color) {
        this.color = color;
    }

    public int getColor() {
        return this.color;
    }
}
